--- a/client/map/index.html
+++ b/client/map/index.html
@@ -1,1 +1,25 @@
-Maps!
+<!DOCTYPE html>
+<html>
+	<head>
+		Head
+	</head>
+	<script>
+		console.log("Running Script");
+
+		// Create WebSocket connection.
+		const socket = new WebSocket("ws://localhost:8080", ["echo-protocol"]);
+
+		// Connection opened
+		socket.addEventListener("open", event => {
+			socket.send("Hello Server!");
+		});
+
+		// Listen for messages
+		socket.addEventListener("message", event => {
+			console.log("Message from server ", event.data);
+		});
+	</script>
+	<body>
+		Maps!
+	</body>
+</html>
