📦 NEW: added map manipulation from control

--- a/client/map/index.html
+++ b/client/map/index.html
@@ -4,19 +4,31 @@
 		Head
 	</head>
 	<script>
-		console.log("Running Script");
-
 		// Create WebSocket connection.
 		const socket = new WebSocket("ws://localhost:8080", ["echo-protocol"]);
 
 		// Connection opened
 		socket.addEventListener("open", event => {
-			socket.send("Hello Server!");
+			socket.send("Hello from map Client!");
 		});
 
 		// Listen for messages
 		socket.addEventListener("message", event => {
-			console.log("Message from server ", event.data);
+			let message = "";
+			if (event.data[0] == "{") message = JSON.parse(event.data);
+			else message = event.data;
+
+			console.log("Message from server ", message);
+
+			switch (message.type) {
+				case "replaceText": {
+					document.body.textContent = message.data;
+					break;
+				}
+				default: {
+					return;
+				}
+			}
 		});
 	</script>
 	<body>
