--- a/client/control/index.html
+++ b/client/control/index.html
@@ -1,1 +1,23 @@
-Controls!
+<!DOCTYPE html>
+<html>
+	<head>
+		Head
+	</head>
+	<script>
+		// Create WebSocket connection.
+		const socket = new WebSocket("ws://localhost:8081", ["echo-protocol"]);
+
+		// Connection opened
+		socket.addEventListener("open", event => {
+			socket.send("Hello from control Client!");
+		});
+
+		// Listen for messages
+		socket.addEventListener("message", event => {
+			console.log("Message from server ", event.data);
+		});
+	</script>
+	<body>
+		Controls!
+	</body>
+</html>
